Bugfixes: polyfill valueAsDate (doesn't work on mobile); and beter specify display none in markup and not in css.

--- a/WaterServer/WaterServer/wwwroot/styles.css
+++ b/WaterServer/WaterServer/wwwroot/styles.css
@@ -128,7 +128,6 @@ header .motto p:not(:first-child) {
 }
 
 .sign-in {
-  display: none;
   position: absolute;
   top: 1vw;
   right: 1vw;
